--- a/static/manifest.json
+++ b/static/manifest.json
@@ -28,8 +28,8 @@
 			"purpose": "maskable"
 		}
 	],
-	"theme_color": "#000000",
-	"background_color": "#FFFFFF",
+	"theme_color": "#fed7aa",
+	"background_color": "#000000",
 	"display": "standalone",
 	"orientation": "portrait"
 }
