--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@supabase/supabase-js": "^1.35.6"
+		"@supabase/supabase-js": "^1.35.6",
+		"daisyui": "^2.31.0"
 	}
 }
