--- a/static/manifest.json
+++ b/static/manifest.json
@@ -2,31 +2,32 @@
 	"name": "El Ambrosia",
 	"short_name": "El Ambrosia",
 	"start_url": "/?home=true",
-	"icons": [
-		{
-			"src": "icons/manifest-icon-192.maskable.png",
-			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "icons/manifest-icon-192.maskable.png",
-			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "maskable"
-		},
-		{
-			"src": "icons/manifest-icon-512.maskable.png",
-			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "icons/manifest-icon-512.maskable.png",
-			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "maskable"
-		}
+	"icons": 
+	[
+	  {
+		"src": "icons/manifest-icon-192.maskable.png",
+		"sizes": "192x192",
+		"type": "image/png",
+		"purpose": "any"
+	  },
+	  {
+		"src": "icons/manifest-icon-192.maskable.png",
+		"sizes": "192x192",
+		"type": "image/png",
+		"purpose": "maskable"
+	  },
+	  {
+		"src": "icons/manifest-icon-512.maskable.png",
+		"sizes": "512x512",
+		"type": "image/png",
+		"purpose": "any"
+	  },
+	  {
+		"src": "icons/manifest-icon-512.maskable.png",
+		"sizes": "512x512",
+		"type": "image/png",
+		"purpose": "maskable"
+	  }
 	],
 	"theme_color": "#fed7aa",
 	"background_color": "#000000",
