--- a/static/manifest.json
+++ b/static/manifest.json
@@ -29,7 +29,7 @@
 		"purpose": "maskable"
 	  }
 	],
-	"theme_color": "#fed7aa",
+	"theme_color": "#dca54c",
 	"background_color": "#000000",
 	"display": "standalone",
 	"orientation": "portrait"
