--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@firebase/app-types": "^0.8.1",
 		"daisyui": "^2.38.1",
-		"firebase": "^9.13.0"
+		"firebase": "^9.13.0",
+		"firebase-admin": "^11.2.0"
 	}
 }
