--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"daisyui": "^2.40.1",
 		"firebase": "^9.14.0",
-		"firebase-admin": "^11.2.1"
+		"firebase-admin": "^11.2.1",
+		"svelte-french-toast": "^1.0.3"
 	}
 }
