--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@types/nodemailer": "^6.4.6",
 		"daisyui": "^2.42.0",
 		"firebase": "^9.14.0",
 		"firebase-admin": "^11.3.0",
+		"nodemailer": "^6.8.0",
 		"svelte-french-toast": "^1.0.3"
 	}
 }
