--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
 	},
 	"devDependencies": {
 		"@firebase/app-types": "^0.8.1",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-auto": "1.0.0-next.91",
+		"@sveltejs/kit": "1.0.0-next.589",
 		"@tailwindcss/forms": "^0.5.3",
 		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.19",
+		"postcss": "^8.4.20",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.53.1",
-		"svelte-check": "^2.9.2",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
+		"svelte-check": "^2.10.2",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"typescript": "^4.9.4",
+		"vite": "^4.0.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@types/nodemailer": "^6.4.6",
-		"daisyui": "^2.42.0",
-		"firebase": "^9.14.0",
-		"firebase-admin": "^11.3.0",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
+		"@types/nodemailer": "^6.4.7",
+		"daisyui": "^2.45.0",
+		"firebase": "^9.15.0",
+		"firebase-admin": "^11.4.0",
 		"nodemailer": "^6.8.0",
 		"svelte-french-toast": "^1.0.3",
 		"xendit-node": "^1.21.10"
